--- a/app/templates/blogpost.html
+++ b/app/templates/blogpost.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="{{url_for('static', filename='/style.css')}}">
+    <script src="https://kit.fontawesome.com/a70663aaec.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E!Blog</title>
@@ -36,30 +37,41 @@
 
 
                 <br>
-                <p>
-                    <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
-                        View Comments
-                    </button>
-                </p>
-                <div style="min-height: 120px;">
-                    <div class="collapse collapse-horizontal" id="collapseWidthExample">
-                        <div class="card card-body" style="width: 300px;">
+                <div class="collapse" id="comments-{{b.id}}">
+                    <div class="card">
+                        <div class="card-body" id="comments-expanded-{{b.id}}">
                             {% for comment in b.comments %}
-                            <div>
-                                <p>{{comment.remark}}</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div>
+                                    <a href="/blogs/{{comment.owner.username}}">{{comment.owner.username}}</a>: {{comment.remark}}
+                                </div>
+                                <div>
 
-                                <p>Comment by:
-                                    <a href="/blogs/{{comment.owner.username}} ">{{comment.owner.username}}</a>
-                            </div>
-                            {% endfor %}
-                        </div>
+                                    <div class="btn-group">
+                                        <button type="button" class="btn btn-sm btn-primary dropdown-toggle" data-bs-toggle="dropdown"></button>
+                                        <ul class="dropdown-menu">
+                                            <li>
+                                                <a href="/delete-comment/{{comment.id}}" class="dropdown-item">Delete</a> </li>
+                                        </ul>
+                                    </div>
+
+                                </div>
+                            </div> {% endfor %} </div>
                     </div>
                 </div>
+                <p class="card-text">
+                    {% if b.comments|length > 0 %}
+                    <a data-bs-toggle="collapse" href="#comments-{{b.id}}" role="button">
+                        <small>View {{b.comments|length}} Comments</small>
+                    </a>
+                    {% else %}
+                    <small class="text-muted">No Comments</small> {% endif %}
+                </p>
+                <form class="form-group mb-3 comment" method="POST" action="/create-comment/{{b.id}}">
+                    <input type="text" id="remark" name="remark" class="form-control" placeholder="Comment something!" />
+                    <button type="submit" class="btn btn-primary">Comment</button>
+                </form>
             </div>
-            <form class="form-group mb-3 comment " method="POST " action="/create-comment/{{b.id}} ">
-                <input type="text-area " id="remark " name="remark " class="form-control " placeholder="Comment on the blog " />
-                <button type="submit " class="btn btn-primary ">Comment</button>
-            </form>
             {% endfor %}
 
         </div>
